--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Becca Aaronson
 email: becca.aaronson@gmail.com.com
 description: "This is the story of a girl who loved cats."
-baseurl: ""
-url: "http://yourdomain.com"
+baseurl: "brickaa.github.io/"
+url: "http://brickaa.github.io/"
 twitter_username: becca_aa
 github_username:  brickaa
 
