--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Becca Aaronson
 email: becca.aaronson@gmail.com.com
 description: "This is the story of a girl who loved cats."
-baseurl: "brickaa.github.io/"
+baseurl: ""
 url: "http://brickaa.github.io/"
 twitter_username: becca_aa
 github_username:  brickaa
