--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Becca Aaronson
 email: becca.aaronson@gmail.com.com
 description: "This is the story of a girl who loved cats."
 baseurl: ""
-url: "http://brickaa.github.io/"
+url: "http://brickaa.github.io"
 twitter_username: becca_aa
 github_username:  brickaa
 
