start footer, add fontawesome

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Becca Aaronson
-email: becca.aaronson@gmail.com.com
+email: becca.aaronson@gmail.com
 description: "This is the story of a girl who loved cats."
 baseurl: ""
 url: "http://brickaa.github.io"
