--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ email: becca.aaronson@gmail.com
 description: "This is the story of a girl who loved cats."
 baseurl: ""
 url: "http://brickaa.github.io"
+insta_username: hello_becca
 twitter_username: becca_aa
 github_username:  brickaa
 
